Added ecampus logo
Added ecampus logo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -300,7 +300,11 @@
 
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
-
+  <img
+    width="40"
+    alt="E-campus Logo"
+    src="../assets/ecampus.png"
+  />
   <span>Welcome</span>
     <div class="spacer"></div>
     <a aria-label="Angular on twitter" target="_blank" rel="noopener" href="https://twitter.com/angular" title="Twitter">
