Updated main page
Updated main page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -366,11 +366,13 @@
 
   <!-- Next Steps -->
   <h2>Next Steps</h2>
-    <ul>
-      <li>Create your own Github Account if you don't have one yet.</li>
-      <li>Clone our https://github.com/nimeshmora/ecampus-web.git repository.</li>
-
-    </ul>
+    
+  <li>You should have a Github account. ( if not, create a one now )</li>
+  <li>Just download or clone our ecampus-web repository to your local machine.</li>
+  <li>Use npm i or npm install to install all the dependencies for this Angular project.</li>
+  <li>Use ng serve --open to run the Angular application.</li>
+  <li>This will open up your default browser and run the application on localhost:4200.</li>
+  <li>for now try out above steps until we are ready to accept your pull requests/new features.</li>
 
   <input type="hidden" #selection>
 
